Remove remaining Guizhan helpers and update 1.21 APIs