@@ -10,14 +10,14 @@ import dev.sefiraat.sefilib.entity.LivingEntityDefinition;
 import dev.sefiraat.sefilib.string.Theme;
 import io.github.thebusybiscuit.slimefun4.api.items.SlimefunItem;
 import io.github.thebusybiscuit.slimefun4.api.recipes.RecipeType;
-import net.guizhanss.guizhanlib.minecraft.helper.MaterialHelper;
-import net.guizhanss.guizhanlib.minecraft.helper.entity.EntityTypeHelper;
+import io.github.thebusybiscuit.slimefun4.libraries.commons.lang.WordUtils;
 import org.bukkit.Material;
 import org.bukkit.entity.EntityType;
 import org.bukkit.inventory.ItemStack;
 
 import javax.annotation.Nonnull;
 import java.util.List;
+import java.util.Locale;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -35,11 +35,10 @@ public final class RecipeTypes {
         Theme.themedItemStack(
             Material.TRIPWIRE_HOOK,
             CultivationThemes.RECIPE_TYPE,
-            "从灌木丛收获",
+            "Bush Harvesting",
             List.of(
-                "该物品可从农耕工艺的",
-                "灌木收获。",
-                ""
+                "This item can be harvested from a",
+                "Cultivation Bush"
             )
         )
     );
@@ -50,11 +49,10 @@ public final class RecipeTypes {
         Theme.themedItemStack(
             Material.ACACIA_SAPLING,
             CultivationThemes.RECIPE_TYPE,
-            "从树木收获",
+            "Tree Harvesting",
             List.of(
-                "该物品可从农耕工艺的",
-                "树木收获。",
-                ""
+                "This item can be harvested from a",
+                "Cultivation Tree"
             )
         )
     );
@@ -65,11 +63,10 @@ public final class RecipeTypes {
         Theme.themedItemStack(
             Material.VILLAGER_SPAWN_EGG,
             CultivationThemes.RECIPE_TYPE,
-            "村民交易",
+            "Villager Trading",
             List.of(
-                "该物品可从",
-                "农夫村民购买。",
-                ""
+                "This item can be bought from a",
+                "farming villager."
             )
         )
     );
@@ -80,11 +77,10 @@ public final class RecipeTypes {
         Theme.themedItemStack(
             Material.VILLAGER_SPAWN_EGG,
             CultivationThemes.RECIPE_TYPE,
-            "村民交易",
+            "Villager Trading",
             List.of(
-                "该物品可从",
-                "制箭师村民购买。",
-                ""
+                "This item can be bought from a",
+                "fletching villager."
             )
         )
     );
@@ -95,10 +91,10 @@ public final class RecipeTypes {
         Theme.themedItemStack(
             Material.ZOMBIE_HEAD,
             CultivationThemes.RECIPE_TYPE,
-            "生物掉落",
+            "Mob Drop",
             List.of(
-                "该物品有几率从指定生物掉落。",
-                ""
+                "This item has a chance to drop from",
+                "the following mob(s)."
             )
         )
     );
@@ -109,20 +105,18 @@ public final class RecipeTypes {
         Theme.themedItemStack(
             Material.FLOWER_POT,
             CultivationThemes.RECIPE_TYPE,
-            "植物培育",
+            "Plant Breeding",
             List.of(
-                "该种子通过培育获得。",
+                "This seed is found via breeding.",
+                "You breed plants by placing",
+                "two plants down with an air block",
+                "between them.",
                 "",
-                "在两个种子中间",
-                "留一个空气方块",
-                "来进行培育。",
+                "The breeding dictionary can be used",
+                "to track your discoveries.",
                 "",
-                "植物宝典可用来记录",
-                "你目前的发现。",
-                "",
-                "提示：黑色粒子表示",
-                "两株植物无法培育。",
-                ""
+                "Hint: Black particles mean the",
+                "two plants CANNOT breed."
             )
         )
     );
@@ -133,8 +127,8 @@ public final class RecipeTypes {
         Theme.themedItemStack(
             Material.BROWN_DYE,
             CultivationThemes.RECIPE_TYPE,
-            "方块掉落",
-            List.of("破坏方块时有几率掉落。", "")
+            "World Drop",
+            List.of("Drops from blocks when broken in the world.")
         )
     );
 
@@ -144,8 +138,8 @@ public final class RecipeTypes {
         Theme.themedItemStack(
             Material.BUCKET,
             CultivationThemes.RECIPE_TYPE,
-            "水桶掉落",
-            List.of("当使用水桶时掉落。", "")
+            "World Drop",
+            List.of("Drops from the world when using a bucket.")
         )
     );
 
@@ -155,10 +149,9 @@ public final class RecipeTypes {
         Theme.themedItemStack(
             Material.IRON_SWORD,
             CultivationThemes.RECIPE_TYPE,
-            "切碎",
+            "Chopped",
             List.of(
-                "用刀来切碎！",
-                ""
+                "Simply chop with a knife!"
             )
         ),
         (itemStacks, itemStack) -> addRecipeToSimpleMachine(Machines.COUNTER_CHOPPING, itemStacks, itemStack)
@@ -170,10 +163,9 @@ public final class RecipeTypes {
         Theme.themedItemStack(
             Material.COMPOSTER,
             CultivationThemes.RECIPE_TYPE,
-            "捣碎",
+            "Mashed",
             List.of(
-                "捣！捣！捣！",
-                ""
+                "Mash Mash Mash"
             )
         ),
         (itemStacks, itemStack) -> addRecipeToSimpleMachine(Machines.COUNTER_MASHER, itemStacks, itemStack)
@@ -185,10 +177,9 @@ public final class RecipeTypes {
         Theme.themedItemStack(
             Material.GLASS,
             CultivationThemes.RECIPE_TYPE,
-            "搅拌",
+            "Blended",
             List.of(
-                "在搅拌机中制作。",
-                ""
+                "Is made by putting an item in the blender."
             )
         ),
         (itemStacks, itemStack) -> addRecipeToSimpleMachine(Machines.COUNTER_BLENDER, itemStacks, itemStack)
@@ -200,10 +191,9 @@ public final class RecipeTypes {
         Theme.themedItemStack(
             Material.SHEARS,
             CultivationThemes.RECIPE_TYPE,
-            "切片",
+            "Sliced",
             List.of(
-                "如此薄而细腻。",
-                ""
+                "So thin and delicate"
             )
         ),
         (itemStacks, itemStack) -> addRecipeToSimpleMachine(Machines.COUNTER_SLICING, itemStacks, itemStack)
@@ -215,10 +205,9 @@ public final class RecipeTypes {
         Theme.themedItemStack(
             Material.BONE,
             CultivationThemes.RECIPE_TYPE,
-            "剁碎",
+            "Ground",
             List.of(
-                "精细处理。",
-                ""
+                "To a fine degree"
             )
         ),
         (itemStacks, itemStack) -> addRecipeToSimpleMachine(Machines.COUNTER_GRINDER, itemStacks, itemStack)
@@ -230,10 +219,9 @@ public final class RecipeTypes {
         Theme.themedItemStack(
             Material.CAULDRON,
             CultivationThemes.RECIPE_TYPE,
-            "煮熟",
+            "Boiled",
             List.of(
-                "烫烫烫！",
-                ""
+                "Hot hot hot!"
             )
         ),
         (itemStacks, itemStack) -> addRecipeToSimpleMachine(Machines.COUNTER_BOILING, itemStacks, itemStack)
@@ -245,10 +233,9 @@ public final class RecipeTypes {
         Theme.themedItemStack(
             Material.BLACK_CONCRETE,
             CultivationThemes.RECIPE_TYPE,
-            "油炸",
+            "Fried",
             List.of(
-                "完美的酥脆。",
-                ""
+                "Crispy Perfection."
             )
         ),
         (itemStacks, itemStack) -> addRecipeToSimpleMachine(Machines.COUNTER_FRYER, itemStacks, itemStack)
@@ -260,10 +247,9 @@ public final class RecipeTypes {
         Theme.themedItemStack(
             Material.POLISHED_BLACKSTONE,
             CultivationThemes.RECIPE_TYPE,
-            "烤制",
+            "Grilled",
             List.of(
-                "鲜嫩多汁。",
-                ""
+                "Juicy and Tender."
             )
         ),
         (itemStacks, itemStack) -> addRecipeToSimpleMachine(Machines.COUNTER_GRILL, itemStacks, itemStack)
@@ -275,10 +261,9 @@ public final class RecipeTypes {
         Theme.themedItemStack(
             Material.POLISHED_DIORITE,
             CultivationThemes.RECIPE_TYPE,
-            "上菜",
+            "Finishing",
             List.of(
-                "使用厨房的上菜柜台来制作该物品。",
-                ""
+                "Use the kitchen's finishing counter to make this item."
             )
         ),
         RecipeTypes::createFoodFinishingRecipe
@@ -290,10 +275,9 @@ public final class RecipeTypes {
         Theme.themedItemStack(
             Material.FURNACE,
             CultivationThemes.RECIPE_TYPE,
-            "烘焙",
+            "Baking",
             List.of(
-                "使用厨房的烘培柜台来制作该物品。",
-                ""
+                "Use the kitchen's oven counter to make this item."
             )
         ),
         RecipeTypes::createFoodBakingRecipe
@@ -344,10 +328,9 @@ public final class RecipeTypes {
     ) {
         Material material = dropFrom.stream().findFirst().orElse(Material.DIRT);
         List<String> lore = dropFrom.stream()
-            .map(material1 -> Theme.CLICK_INFO.apply(MaterialHelper.getName(material1)))
-            .collect(Collectors.toList());
-        lore.add("");
-        ItemStack itemStack = Theme.themedItemStack(material, CultivationThemes.RECIPE_TYPE, "从以下方块掉落：", lore);
+            .map(material1 -> Theme.CLICK_INFO.apply(WordUtils.capitalize(material1.name().toLowerCase(Locale.ROOT))))
+            .toList();
+        ItemStack itemStack = Theme.themedItemStack(material, CultivationThemes.RECIPE_TYPE, "Drops From", lore);
         CustomDropListener.addBlockDrop(new CustomDropListener.BlockDrop(stackToDrop, dropFrom, dropChance));
         return new ItemStack[]{
             null, null, null,
@@ -426,13 +409,12 @@ public final class RecipeTypes {
     ) {
         Set<EntityType> types = dropFrom.stream().map(LivingEntityDefinition::getType).collect(Collectors.toSet());
         List<String> lore = types.stream()
-            .map(type -> Theme.CLICK_INFO.apply(EntityTypeHelper.getName(type)))
-            .collect(Collectors.toList());
-        lore.add("");
+            .map(type -> Theme.CLICK_INFO.apply(WordUtils.capitalize(type.name().toLowerCase(Locale.ROOT))))
+            .toList();
         final ItemStack itemStack = Theme.themedItemStack(
             Material.SKELETON_SKULL,
             CultivationThemes.RECIPE_TYPE,
-            "从以下生物掉落：",
+            "Drops From",
             lore
         );
         MobDropListener.addDrop(new MobDropListener.MobDrop(stackToDrop, types, dropChance));
